@@ -38,6 +38,7 @@ android {
     testOptions {
         unitTests.isIncludeAndroidResources = true
         unitTests.all {
+            it.jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
             it.extensions.configure<JacocoTaskExtension>("jacoco") {
                 isIncludeNoLocationClasses = true
             }
